# meppp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  install_compose_plugin.sh  update_cloudflare_real_ip.py
deploy/cron/: meppp-backup.sh  meppp-prepare-backup.sh
deploy/macos/: com.meppp.offsite-backup.plist.example  meppp-offsite-pull.sh
deploy/nginx/: cloudflare-real-ip.conf.example  meppp.com.conf.example
deploy/remote/: meppp-remote-monitor.sh  meppp-remote-pull.env.example  meppp-remote-pull.sh
deploy/rrsync/: meppp-rrsync-compat.sh
deploy/systemd/: meppp-backup-prepare.service  meppp-backup-prepare.timer  meppp-external-refresh.service  meppp-external-refresh.timer  meppp-remote-monitor-failure.service  meppp-remote-monitor.service  meppp-remote-monitor.timer  meppp-remote-pull-failure.service  meppp-remote-pull.service  meppp-remote-pull.timer
docker/: entrypoint.sh  healthcheck.py
docs/: ARCHITECTURE.md  CLEAN_ROOM.md  EXTERNAL_SHARE_ROADMAP.md  OPERATIONS.md  PRODUCT_SCOPE.md  UI_SPEC.md
src/meppp/: __init__.py
src/meppp/accounts/: admin.py  admin_forms.py  apps.py  member_forms.py  member_services.py  models.py  normalization.py  services.py  test_invitations.py  test_sensitive_data.py  tests.py
src/meppp/audit/: admin.py  apps.py  models.py  services.py  tests.py
src/meppp/web/: apps.py  (+19 more)
tests/: test_container_healthcheck.py  test_release_metadata.py
tests/browser/: test_public_ui.py
(+135 files in other folders)
